insert img and button into page index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Primi passi col DOM</title>
 </head>
 <body>
-    
+    <h1>Primi passi col DOM</h1>
+    <div class="d-flex">
+        <img src="./img/white_lamp.png" alt="Lamp off">
+        <button id="changeImg">Accendi</button>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
