--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Primi passi col DOM</h1>
     <div class="d-flex">
-        <img src="./img/white_lamp.png" alt="Lamp off">
-        <button id="changeImg">Accendi</button>
+        <img id="lamp" src="./img/white_lamp.png" alt="LampOff">
+        <button id="change">Accendi</button>
     </div>
     <script src="./script.js"></script>
 </body>
