--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./style.css">
     <title>Primi passi col DOM</title>
 </head>
-<body>
+<body id="body">
     <h1>Primi passi col DOM</h1>
     <div class="d-flex">
         <img id="lamp" src="./img/white_lamp.png" alt="LampOff">
